@@ -17,6 +17,7 @@ Version 0.6.0~dev
 	* Support mxf muxing in ffmpeg worker, refs: #5763.
 	* Support mov muxing in ffmpeg worker, refs: #5763.
 	* Support SD letterboxing in ffmpeg worker, refs: #5763.
+	* Add transcode and mux method to ffmpeg worker, refs: #5763.
 
 Version 0.5.0 Released on 2012/03/29
 
